[tool.poetry]
name = "consistent-header"
version = "0.1.0"
description = "Python-based tool for keeping source file headers consistent."
authors = [
    "Rafe Kaplan",
]
packages = [
    {include = "conhead", from = "."}
]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1"
tomli = "^2.0"

[tool.poetry.dev-dependencies]
black = "^22.0"
coverage = "^6.3"
flake8 = "^4.0"
isort = "^5.10"
pyright = "^1.1"
pytest-cov = "^3.0"
pytest = "^7.1"

[tool.poetry.scripts]
conhead = "conhead.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py39']

[tool.isort]
force_single_line = true
profile = "black"

[tool.pyright]
pythonVersion = "3.9"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportPrivateUsage = true
reportConstantRedefinition = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportInconsistentConstructor = true
reportOverlappingOverload = true
reportUnknownLambdaType = true
reportInvalidTypeVarUse = true
reportUnnecessaryCast = true
reportUnsupportedDunderAll = true

[tool.conhead.header.py]
template="""
    # line 1 {{YEAR}}
"""
