# Copyright 2022 Rafe Kaplan
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "conhead"
version = "0.1.1"
description = "Python-based tool for keeping source file headers consistent."
license = "Apache-2.0"
authors = [
    "Rafe Kaplan",
]
readme = "README.rst"
homepage = "https://github.com/slobberchops/conhead"
repository = "https://github.com/slobberchops/conhead"

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Quality Assurance",
]

packages = [
    {include = "conhead", from = "."}
]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1"
tomli = "^2.0"

[tool.poetry.dev-dependencies]
black = "^22.0"
coverage = "^6.3"
flake8 = "^4.0"
isort = "^5.10"
pyright = "^1.1"
pytest-cov = "^3.0"
pytest = "^7.1"

[tool.poetry.scripts]
conhead = "conhead.main:main"

[tool.poetry.urls]
"Changlog" = "https://github.com/slobberchops/conhead/blob/main/CHANGES.rst"
"Issue Tracker" = "https://github.com/slobberchops/conhead/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py39']

[tool.isort]
force_single_line = true
profile = "black"

[tool.pyright]
pythonVersion = "3.9"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportPrivateUsage = true
reportConstantRedefinition = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportInconsistentConstructor = true
reportOverlappingOverload = true
reportUnknownLambdaType = true
reportInvalidTypeVarUse = true
reportUnnecessaryCast = true
reportUnsupportedDunderAll = true

[tool.conhead.header.pylike]
extensions = ['py', 'toml', 'yaml']
template="""
    # Copyright {{YEAR}} Rafe Kaplan
    # SPDX-License-Identifier: Apache-2.0

"""
